# TensorRT-LLM

./: .extra-llm-api-config.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
cpp/include/tensorrt_llm/batch_manager/: capacityScheduler.h  kvCacheManager.h  (+1 more)
cpp/tensorrt_llm/batch_manager/: CMakeLists.txt  agentTree.cpp  capacityScheduler.cpp  kvCacheManager.cpp  microBatchScheduler.cpp
cpp/tensorrt_llm/executor/: serialization.cpp
examples/scaffolding/: benchmark_agent_chat.py
examples/scaffolding/contrib/Coder/coder_mcp/: pyproject.toml
examples/scaffolding/contrib/Coder/coder_mcp/src/coder_mcp/: __init__.py  __main__.py  app.py  patch.py  plan.py  server.py  tools.py
examples/scaffolding/contrib/Coder/coder_mcp/src/coder_mcp/backends/: __init__.py  apiary.py
examples/scaffolding/pareto/: _common.py  trace_replay_client.py  trace_replay_pareto_aggregate.py
examples/scaffolding/tracing/: plot_trace_replay_agent_pareto.py  plot_trace_replay_job_pareto.py  plot_trace_replay_token_pareto.py
tensorrt_llm/_torch/pyexecutor/: _util.py  config.py  llm_request.py  py_executor.py  py_executor_creator.py  resource_manager.py  scheduler.py
tensorrt_llm/commands/: serve.py
tensorrt_llm/executor/: base_worker.py  executor.py  proxy.py  request.py  utils.py  worker.py
tensorrt_llm/llmapi/: __init__.py  llm.py  llm_args.py
tensorrt_llm/scaffolding/: replay.py  task.py  task_collection.py  worker.py
tensorrt_llm/serve/: control_plane.py  harmony_adapter.py  openai_protocol.py  openai_server.py  postprocess_handlers.py
(+26 files in other folders)
