[project]
name = "coder_mcp"
version = "0.1.0"
description = "MCP server for the TensorRT-LLM Coder agent with pluggable sandbox backends"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "uvicorn>=0.30",
    "mcp>=1.0",
    "starlette>=0.38",
]

[project.optional-dependencies]
fast = ["uvloop>=0.19"]

[project.scripts]
coder_mcp = "coder_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
